fixed extra space on homepage

--- a/assets/css/basicLayout.css
+++ b/assets/css/basicLayout.css
@@ -64,3 +64,7 @@ html, body {
   overflow: scroll;
   height: calc(100vh - 300px);
 }
+
+.authenticated-route-container.full{
+    height: 100vh !important;
+}
